--- a/code.html
+++ b/code.html
@@ -67,7 +67,7 @@
                 <a class="nav-link active" href="/code.html">The Code</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">The Repo</a>
+                <a class="nav-link" href="https://github.com/frotzen/EvilOlive">The Repo</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="">About</a>
