--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <a class="nav-link" href="/code.html">The Code</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">The Repo</a>
+                <a class="nav-link" href="https://github.com/frotzen/EvilOlive">The Repo</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="">About</a>
@@ -84,7 +84,7 @@
       <div class="row row-cols-1 row-cols-md-2 h-100 align-items-center">
         <div class="col mt-5 mt-md-0">
           <h1 class="display-5">EvilOlive: Coding Challenge</h1>
-          <h4 class="lead">Your project description goes here</h4>
+          <h4 class="lead">An app to check if a word is a palindrome</h4>
           <ul class="checkList">
             <li>
               <i class="bi bi-check-square-fill"></i
