--- a/code.html
+++ b/code.html
@@ -67,13 +67,19 @@
                 <a class="nav-link active" href="/code.html">The Code</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="https://github.com/frotzen/EvilOlive">The Repo</a>
+                <a class="nav-link" href="https://github.com/frotzen/EvilOlive"
+                  >The Repo</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">About</a>
+                <a class="nav-link" href="https://elwinbeall.netlify.app/#about"
+                  >About</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
+                <a class="nav-link" href="https://elwinbeall.netlify.app/#blog"
+                  >Blog</a
+                >
               </li>
             </ul>
           </div>
@@ -114,11 +120,11 @@
           <p>
             The main function that gets input and utilizes other functions as
             helpers
-          </p>          
+          </p>
         </div>
         <p></p>
         <p></p>
-        <hr/>
+        <hr />
         <!-- Code Editor -->
         <div class="col-12 col-lg-8">
           <pre class="line-numbers">
@@ -145,7 +151,7 @@
         </div>
         <p></p>
         <p></p>
-        <hr/>
+        <hr />
         <!-- Code Editor -->
         <div class="col-12 col-lg-8">
           <pre class="line-numbers">
@@ -177,7 +183,7 @@
         </div>
         <p></p>
         <p></p>
-        <hr/>
+        <hr />
         <!-- Code Editor -->
         <div class="col-12 col-lg-8">
           <pre class="line-numbers">
@@ -224,9 +230,15 @@
             <img src="/img/EB_LogoWhite.png" height="24" />
           </div>
           <div class="col text-center text-lg-end">
-            <a href="#"><i class="bi bi-linkedin socialIcons"></i></a>
-            <a href="#"><i class="bi bi-twitter socialIcons"></i></a>
-            <a href="#"><i class="bi bi-github socialIcons"></i></a>
+            <a href="https://www.linkedin.com/in/elwin-beall/"
+              ><i class="bi bi-linkedin socialIcons"></i
+            ></a>
+            <a href="https://twitter.com/frotzen"
+              ><i class="bi bi-twitter socialIcons"></i
+            ></a>
+            <a href="https://github.com/frotzen"
+              ><i class="bi bi-github socialIcons"></i
+            ></a>
           </div>
         </div>
       </div>
